crates/toml_edit/fixtures/invalid/integer/double-us.stderr
TOML parse error at line 1, column 15
  |
1 | double-us = 1__23
  |               ^
Invalid integer
Expected digit
